# 0909

./: .gitignore  PKG-INFO  README.md  SOURCES.txt  __init__.py  aggressive.yaml  backtest.py  broker.py  calendar_sync.py  cli.py  config.py  cross_assets.csv  cross_assets.example.csv  cross_assets.py  default.yaml  doc_extract.txt  entry_points.txt  gold-scalper-paper.service  high_frequency_020_price_stable.yaml  high_frequency_025_price_aggressive.yaml  high_frequency_025_price_aggressive_vps_csv.yaml  high_frequency_025_price_aggressive_vps_ibkr.yaml  high_frequency_scalping.yaml  hybrid_scalping.yaml  ibkr_adapter.py  indicators.py  live_data.py  models.py  mt5_adapter.py  my_03_scalper.yaml  news.csv  news.example.csv  news.py  notifications.py  paper.py  portfolio.py  pyproject.toml  pyvenv.cfg  reporting.py  requires.txt  (+20 more)
