[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gold-scalper"
version = "0.1.0"
description = "XAUUSD MT5 + Python backtest and paper-trading strategy system."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
mt5 = ["MetaTrader5>=5.0.4682"]
ibkr = ["ibapi>=9.81.1.post1"]
dev = ["pytest>=8.0"]

[project.scripts]
gold-scalper = "gold_scalper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
